// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Cerberus Theme pageTokens should match the established baseline 1`] = `
{
  "page": {
    "backdrop": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "rgba(32.00000189244747, 25.000000409781933, 53.00000064074993, 0.800000011920929)",
          "_lightMode": "rgba(188.0000039935112, 186.0000041127205, 202.00000315904617, 0.5)",
          "base": "rgba(32.00000189244747, 25.000000409781933, 53.00000064074993, 0.800000011920929)",
        },
      },
    },
    "bg": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.80}",
          "_lightMode": "{colors.neutral.5}",
          "base": "{colors.neutral.80}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.70}",
          "_lightMode": "{colors.neutral.15}",
          "base": "{colors.neutral.70}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.60}",
          "_lightMode": "{colors.neutral.20}",
          "base": "{colors.neutral.60}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "border": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.60}",
          "_lightMode": "{colors.brand.20}",
          "base": "{colors.neutral.60}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.50}",
          "_lightMode": "{colors.neutral.20}",
          "base": "{colors.neutral.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.70}",
          "_lightMode": "{colors.neutral.15}",
          "base": "{colors.neutral.70}",
        },
      },
    },
    "surface": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.90}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.neutral.90}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.80}",
          "_lightMode": "{colors.neutral.5}",
          "base": "{colors.neutral.80}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.70}",
          "_lightMode": "{colors.neutral.10}",
          "base": "{colors.neutral.70}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.60}",
          "_lightMode": "{colors.neutral.15}",
          "base": "{colors.neutral.60}",
        },
      },
      "initial": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.neutral.100}",
          "_lightMode": "{colors.brand.5}",
          "base": "{colors.neutral.100}",
        },
      },
      "inverse": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.5}",
          "_lightMode": "{colors.neutral.90}",
          "base": "{colors.neutral.5}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Static text with the least amount of emphasis, like disabled text elements or captions. ",
        "value": {
          "_darkMode": "{colors.neutral.20}",
          "_lightMode": "{colors.neutral.40}",
          "base": "{colors.neutral.20}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.10}",
          "_lightMode": "{colors.neutral.60}",
          "base": "{colors.neutral.10}",
        },
      },
      "300": {
        "description": "High emphasis static text on page, like page headers or section titles. ",
        "value": {
          "_darkMode": "{colors.neutral.white}",
          "_lightMode": "{colors.brand.100}",
          "base": "{colors.neutral.white}",
        },
      },
      "initial": {
        "description": "The default styling for static text and icons on a page.",
        "value": {
          "_darkMode": "{colors.brand.5}",
          "_lightMode": "{colors.neutral.90}",
          "base": "{colors.brand.5}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.neutral.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.neutral.100}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme actionTokens should match the established baseline 1`] = `
{
  "action": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.70}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.70}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.50}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.60}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.60}",
        },
      },
    },
    "border": {
      "100": {
        "description": "for use on less prominent actionable borders, like input fields etc",
        "value": {
          "_darkMode": "{colors.neutral.30}",
          "_lightMode": "{colors.neutral.40}",
          "base": "{colors.neutral.30}",
        },
      },
      "focus": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.70}",
          "base": "{colors.brand.40}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.30}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.70}",
          "_lightMode": "{colors.brand.20}",
          "base": "{colors.brand.70}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.action.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.brand.80}",
          "_lightMode": "{colors.brand.10}",
          "base": "{colors.brand.80}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "navigation": {
      "hover": {
        "description": "Text color of hyperlinks throughout the site while hovering",
        "value": {
          "_darkMode": "{colors.brand.20}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.20}",
        },
      },
      "initial": {
        "description": "Text color of hyperlinks throughout the site. ",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.30}",
        },
      },
      "visited": {
        "description": "Text color of hyperlinks throughout the site that have been visited",
        "value": {
          "_darkMode": "{colors.neutral.20}",
          "_lightMode": "{colors.neutral.60}",
          "base": "{colors.neutral.20}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Text action items that are sitting on a lighter background color, like secondary buttons etc. ",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.80}",
          "base": "{colors.brand.40}",
        },
      },
      "200": {
        "description": "reserved for interactive text, or icons using brand colors. ",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.30}",
        },
      },
      "initial": {
        "description": 
"Text color inside of interactive items using the action palette
Use for: Buttons (filled, outline). Button icons"
,
        "value": {
          "_darkMode": "{colors.brand.5}",
          "_lightMode": "{colors.brand.5}",
          "base": "{colors.brand.5}",
        },
      },
      "inverse": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.5}",
          "_lightMode": "{colors.brand.100}",
          "base": "{colors.brand.5}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.brand.60}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.60}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme secondaryActionTokens should match the established baseline 1`] = `
{
  "secondaryAction": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.30}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.50}",
          "_lightMode": "{colors.brand.30}",
          "base": "{colors.neutral.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.60}",
          "_lightMode": "{colors.brand.20}",
          "base": "{colors.neutral.60}",
        },
      },
    },
    "border": {
      "100": {
        "description": "for use on less prominent actionable borders, like input fields etc",
        "value": {
          "_darkMode": "{colors.brand.70}",
          "_lightMode": "{colors.brand.20}",
          "base": "{colors.brand.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.50}",
          "_lightMode": "{colors.brand.30}",
          "base": "{colors.brand.50}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.80}",
          "_lightMode": "{colors.neutral.15}",
          "base": "{colors.neutral.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.secondary-action.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.neutral.80}",
          "_lightMode": "{colors.neutral.10}",
          "base": "{colors.neutral.80}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "navigation": {
      "hover": {
        "description": "Text color of hyperlinks throughout the site while hovering. ",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.30}",
        },
      },
      "initial": {
        "description": "Text color of hyperlinks throughout the site. ",
        "value": {
          "_darkMode": "{colors.brand.10}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.10}",
        },
      },
      "visited": {
        "description": "Text color of hyperlinks throughout the site that have been vistited",
        "value": {
          "_darkMode": "{colors.brand.20}",
          "_lightMode": "{colors.brand.100}",
          "base": "{colors.brand.20}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Text color inside of interactive items and icons that have an inverse background of the initial token. That may need a different style of emphasis. Use case may vary per product.",
        "value": {
          "_darkMode": "{colors.brand.10}",
          "_lightMode": "{colors.brand.100}",
          "base": "{colors.brand.10}",
        },
      },
      "200": {
        "description": 
"Text color inside of interactive items
Use for: Buttons (filled, outline). Button icons that may need a different style of emphasis. Use case may vary per product."
,
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.30}",
        },
      },
      "initial": {
        "description": 
"Text color inside of interactive items
Use for: Buttons (filled, outline). Button icons that may need a different style of emphasis. Use case may vary per product."
,
        "value": {
          "_darkMode": "{colors.brand.20}",
          "_lightMode": "{colors.brand.90}",
          "base": "{colors.brand.20}",
        },
      },
      "static": {
        "description": 
"Text color inside of interactive items
Use for: Buttons (filled, outline). Button icons that may need a different style of emphasis. Use case may vary per product."
,
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.40}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme infoTokens should match the established baseline 1`] = `
{
  "info": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.50}",
          "_lightMode": "{colors.info.50}",
          "base": "{colors.info.50}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.90}",
          "_lightMode": "{colors.info.20}",
          "base": "{colors.info.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.70}",
          "_lightMode": "{colors.info.30}",
          "base": "{colors.info.70}",
        },
      },
    },
    "border": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.70}",
          "_lightMode": "{colors.info.40}",
          "base": "{colors.info.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.50}",
          "_lightMode": "{colors.info.60}",
          "base": "{colors.info.50}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.80}",
          "_lightMode": "{colors.info.30}",
          "base": "{colors.info.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.info.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.info.90}",
          "_lightMode": "{colors.info.20}",
          "base": "{colors.info.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.info.90}",
          "_lightMode": "{colors.info.20}",
          "base": "{colors.info.90}",
        },
      },
      "200": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.info.70}",
          "_lightMode": "{colors.info.50}",
          "base": "{colors.info.70}",
        },
      },
      "initial": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.info.80}",
          "_lightMode": "{colors.info.30}",
          "base": "{colors.info.80}",
        },
      },
    },
    "text": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.40}",
          "_lightMode": "{colors.info.80}",
          "base": "{colors.info.40}",
        },
      },
      "200": {
        "description": "High emphasis text or icon to indicate an info state or highlight information",
        "value": {
          "_darkMode": "{colors.info.10}",
          "_lightMode": "{colors.info.100}",
          "base": "{colors.info.10}",
        },
      },
      "initial": {
        "description": "The default styling for static info text and icons within an info palette container",
        "value": {
          "_darkMode": "{colors.info.50}",
          "_lightMode": "{colors.info.70}",
          "base": "{colors.info.50}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.info.60}",
          "_lightMode": "{colors.info.60}",
          "base": "{colors.info.60}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme successTokens should match the established baseline 1`] = `
{
  "success": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.40}",
          "_lightMode": "{colors.success.80}",
          "base": "{colors.success.40}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.60}",
          "_lightMode": "{colors.success.70}",
          "base": "{colors.success.60}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.50}",
          "_lightMode": "{colors.success.60}",
          "base": "{colors.success.50}",
        },
      },
    },
    "border": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.50}",
          "_lightMode": "{colors.success.70}",
          "base": "{colors.success.50}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.80}",
          "_lightMode": "{colors.success.20}",
          "base": "{colors.success.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.success.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.success.90}",
          "_lightMode": "{colors.success.10}",
          "base": "{colors.success.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.success.90}",
          "_lightMode": "{colors.success.20}",
          "base": "{colors.success.90}",
        },
      },
      "200": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.success.80}",
          "_lightMode": "{colors.success.60}",
          "base": "{colors.success.80}",
        },
      },
      "initial": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.success.60}",
          "_lightMode": "{colors.success.50}",
          "base": "{colors.success.60}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Medium emphasis success text ",
        "value": {
          "_darkMode": "{colors.success.30}",
          "_lightMode": "{colors.success.80}",
          "base": "{colors.success.30}",
        },
      },
      "200": {
        "description": "Highest emphasis success color",
        "value": {
          "_darkMode": "{colors.success.10}",
          "_lightMode": "{colors.success.100}",
          "base": "{colors.success.10}",
        },
      },
      "initial": {
        "description": "The default color of body success text within a success colored container. ",
        "value": {
          "_darkMode": "{colors.success.60}",
          "_lightMode": "{colors.success.60}",
          "base": "{colors.success.60}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.success.100}",
          "_lightMode": "{colors.success.10}",
          "base": "{colors.success.100}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.success.70}",
          "_lightMode": "{colors.success.70}",
          "base": "{colors.success.70}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme warningTokens should match the established baseline 1`] = `
{
  "warning": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.40}",
          "_lightMode": "{colors.warning.70}",
          "base": "{colors.warning.40}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.60}",
          "_lightMode": "{colors.warning.60}",
          "base": "{colors.warning.60}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.70}",
          "_lightMode": "{colors.warning.50}",
          "base": "{colors.warning.70}",
        },
      },
    },
    "border": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.20}",
          "_lightMode": "{colors.warning.50}",
          "base": "{colors.warning.20}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.80}",
          "_lightMode": "{colors.warning.30}",
          "base": "{colors.warning.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.warning.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.warning.90}",
          "_lightMode": "{colors.warning.20}",
          "base": "{colors.warning.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.warning.90}",
          "_lightMode": "{colors.warning.20}",
          "base": "{colors.warning.90}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.50}",
          "_lightMode": "{colors.warning.60}",
          "base": "{colors.warning.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.70}",
          "_lightMode": "{colors.warning.40}",
          "base": "{colors.warning.70}",
        },
      },
    },
    "text": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.30}",
          "_lightMode": "{colors.warning.90}",
          "base": "{colors.warning.30}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.100}",
          "_lightMode": "{colors.warning.100}",
          "base": "{colors.warning.100}",
        },
      },
      "initial": {
        "description": "The default color of body warning text and icons within a warning colored container. ",
        "value": {
          "_darkMode": "{colors.warning.40}",
          "_lightMode": "{colors.warning.90}",
          "base": "{colors.warning.40}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.warning.100}",
          "_lightMode": "{colors.warning.20}",
          "base": "{colors.warning.100}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.warning.80}",
          "_lightMode": "{colors.warning.80}",
          "base": "{colors.warning.80}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme dangerTokens should match the established baseline 1`] = `
{
  "danger": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.30}",
          "_lightMode": "{colors.danger.90}",
          "base": "{colors.danger.30}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.50}",
          "_lightMode": "{colors.danger.70}",
          "base": "{colors.danger.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.70}",
          "_lightMode": "{colors.danger.60}",
          "base": "{colors.danger.70}",
        },
      },
    },
    "border": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.30}",
          "_lightMode": "{colors.danger.50}",
          "base": "{colors.danger.30}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.80}",
          "_lightMode": "{colors.danger.20}",
          "base": "{colors.danger.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.danger.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.danger.90}",
          "_lightMode": "{colors.danger.10}",
          "base": "{colors.danger.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.100}",
          "_lightMode": "{colors.neutral.white}",
          "base": "{colors.brand.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.danger.90}",
          "_lightMode": "{colors.danger.10}",
          "base": "{colors.danger.90}",
        },
      },
      "200": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.danger.70}",
          "_lightMode": "{colors.danger.60}",
          "base": "{colors.danger.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.80}",
          "_lightMode": "{colors.danger.30}",
          "base": "{colors.danger.80}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Medium emphasis danger text ",
        "value": {
          "_darkMode": "{colors.danger.20}",
          "_lightMode": "{colors.danger.80}",
          "base": "{colors.danger.20}",
        },
      },
      "200": {
        "description": "High emphasis text or icon to indicate a danger state, like an error within an input field, etc. ",
        "value": {
          "_darkMode": "{colors.danger.10}",
          "_lightMode": "{colors.danger.100}",
          "base": "{colors.danger.10}",
        },
      },
      "initial": {
        "description": "The default color of body danger text within a danger colored container. ",
        "value": {
          "_darkMode": "{colors.danger.60}",
          "_lightMode": "{colors.danger.70}",
          "base": "{colors.danger.60}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.danger.100}",
          "_lightMode": "{colors.danger.10}",
          "base": "{colors.danger.100}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.danger.80}",
          "_lightMode": "{colors.danger.80}",
          "base": "{colors.danger.80}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme gradientTokens should match the established baseline 1`] = `
{
  "gradient": {
    "amphiaraus-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.60}",
          "_lightMode": "{colors.info.60}",
          "base": "{colors.info.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.90}",
          "_lightMode": "{colors.info.90}",
          "base": "{colors.info.90}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.20}",
          "_lightMode": "{colors.info.20}",
          "base": "{colors.info.20}",
        },
      },
    },
    "amphiaraus-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.30}",
          "_lightMode": "{colors.info.30}",
          "base": "{colors.info.30}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.10}",
          "_lightMode": "{colors.info.10}",
          "base": "{colors.info.10}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.80}",
          "_lightMode": "{colors.info.80}",
          "base": "{colors.info.80}",
        },
      },
    },
    "asphodel-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.60}",
          "_lightMode": "{colors.warning.60}",
          "base": "{colors.warning.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.80}",
          "_lightMode": "{colors.warning.80}",
          "base": "{colors.warning.80}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.100}",
          "_lightMode": "{colors.warning.100}",
          "base": "{colors.warning.100}",
        },
      },
    },
    "asphodel-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.50}",
          "_lightMode": "{colors.warning.50}",
          "base": "{colors.warning.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.20}",
          "_lightMode": "{colors.warning.20}",
          "base": "{colors.warning.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.90}",
          "_lightMode": "{colors.warning.90}",
          "base": "{colors.warning.90}",
        },
      },
    },
    "charon-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.40}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.70}",
          "_lightMode": "{colors.brand.70}",
          "base": "{colors.brand.70}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.10}",
          "_lightMode": "{colors.brand.10}",
          "base": "{colors.brand.10}",
        },
      },
    },
    "charon-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.40}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.20}",
          "_lightMode": "{colors.brand.20}",
          "base": "{colors.brand.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.70}",
          "_lightMode": "{colors.brand.70}",
          "base": "{colors.brand.70}",
        },
      },
    },
    "hades-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.50}",
          "_lightMode": "{colors.danger.50}",
          "base": "{colors.danger.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.80}",
          "_lightMode": "{colors.danger.80}",
          "base": "{colors.danger.80}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.10}",
          "_lightMode": "{colors.danger.10}",
          "base": "{colors.danger.10}",
        },
      },
    },
    "hades-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.40}",
          "_lightMode": "{colors.danger.40}",
          "base": "{colors.danger.40}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.20}",
          "_lightMode": "{colors.danger.20}",
          "base": "{colors.danger.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.80}",
          "_lightMode": "{colors.danger.80}",
          "base": "{colors.danger.80}",
        },
      },
    },
    "nyx-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.60}",
          "_lightMode": "{colors.neutral.60}",
          "base": "{colors.neutral.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.100}",
          "_lightMode": "{colors.neutral.100}",
          "base": "{colors.neutral.100}",
        },
      },
      "text": {
        "description": "Reserved for usage only on top of gradients",
        "value": {
          "_darkMode": "{colors.neutral.20}",
          "_lightMode": "{colors.neutral.20}",
          "base": "{colors.neutral.20}",
        },
      },
    },
    "nyx-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.10}",
          "_lightMode": "{colors.neutral.10}",
          "base": "{colors.neutral.10}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.30}",
          "_lightMode": "{colors.neutral.30}",
          "base": "{colors.neutral.30}",
        },
      },
      "text": {
        "description": "Reserved for usage only on top of gradients",
        "value": {
          "_darkMode": "{colors.neutral.100}",
          "_lightMode": "{colors.neutral.100}",
          "base": "{colors.neutral.100}",
        },
      },
    },
    "styx-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.70}",
          "_lightMode": "{colors.accent.70}",
          "base": "{colors.accent.70}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.50}",
          "_lightMode": "{colors.accent.50}",
          "base": "{colors.accent.50}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.100}",
          "_lightMode": "{colors.accent.100}",
          "base": "{colors.accent.100}",
        },
      },
    },
    "styx-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.50}",
          "_lightMode": "{colors.accent.50}",
          "base": "{colors.accent.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.20}",
          "_lightMode": "{colors.accent.20}",
          "base": "{colors.accent.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.90}",
          "_lightMode": "{colors.accent.90}",
          "base": "{colors.accent.90}",
        },
      },
    },
    "thanatos-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.80}",
          "_lightMode": "{colors.success.80}",
          "base": "{colors.success.80}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.60}",
          "_lightMode": "{colors.success.60}",
          "base": "{colors.success.60}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.20}",
          "_lightMode": "{colors.success.20}",
          "base": "{colors.success.20}",
        },
      },
    },
    "thanatos-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.40}",
          "_lightMode": "{colors.success.40}",
          "base": "{colors.success.40}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.10}",
          "_lightMode": "{colors.success.10}",
          "base": "{colors.success.10}",
        },
      },
      "text": {
        "description": "for text and icons on top of a gradient",
        "value": {
          "_darkMode": "{colors.success.90}",
          "_lightMode": "{colors.success.90}",
          "base": "{colors.success.90}",
        },
      },
    },
  },
}
`;

exports[`Cerberus Theme dataVizTokens should match the established baseline 1`] = `
{
  "dataViz": {
    "diverging": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.50}",
          "_lightMode": "{colors.warning.50}",
          "base": "{colors.warning.50}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.40}",
          "_lightMode": "{colors.warning.40}",
          "base": "{colors.warning.40}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.30}",
          "_lightMode": "{colors.warning.30}",
          "base": "{colors.warning.30}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.20}",
          "_lightMode": "{colors.warning.20}",
          "base": "{colors.warning.20}",
        },
      },
      "50": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.60}",
          "_lightMode": "{colors.warning.60}",
          "base": "{colors.warning.60}",
        },
      },
      "500": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.10}",
          "_lightMode": "{colors.neutral.10}",
          "base": "{colors.neutral.10}",
        },
      },
      "600": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.30}",
          "base": "{colors.brand.30}",
        },
      },
      "700": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.40}",
        },
      },
      "800": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.50}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.50}",
        },
      },
      "900": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.60}",
          "_lightMode": "{colors.brand.60}",
          "base": "{colors.brand.60}",
        },
      },
    },
    "progress": {
      "complete": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.60}",
          "_lightMode": "{colors.success.60}",
          "base": "{colors.success.60}",
        },
      },
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.70}",
          "_lightMode": "{colors.brand.70}",
          "base": "{colors.brand.70}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.40}",
        },
      },
    },
    "qualitative": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.50}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.50}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.60}",
          "_lightMode": "{colors.warning.60}",
          "base": "{colors.warning.60}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.success.60}",
          "_lightMode": "{colors.success.60}",
          "base": "{colors.success.60}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.50}",
          "_lightMode": "{colors.info.50}",
          "base": "{colors.info.50}",
        },
      },
      "500": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.30}",
          "_lightMode": "{colors.brand.30}",
          "base": "{colors.brand.30}",
        },
      },
      "600": {
        "description": "",
        "value": {
          "_darkMode": "{colors.accent.70}",
          "_lightMode": "{colors.accent.70}",
          "base": "{colors.accent.70}",
        },
      },
      "700": {
        "description": "",
        "value": {
          "_darkMode": "{colors.neutral.40}",
          "_lightMode": "{colors.neutral.40}",
          "base": "{colors.neutral.40}",
        },
      },
    },
    "sequential": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.80}",
          "_lightMode": "{colors.brand.10}",
          "base": "{colors.brand.80}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.60}",
          "_lightMode": "{colors.brand.40}",
          "base": "{colors.brand.60}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.50}",
          "_lightMode": "{colors.brand.50}",
          "base": "{colors.brand.50}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.40}",
          "_lightMode": "{colors.brand.70}",
          "base": "{colors.brand.40}",
        },
      },
      "500": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.20}",
          "_lightMode": "{colors.brand.80}",
          "base": "{colors.brand.20}",
        },
      },
      "600": {
        "description": "",
        "value": {
          "_darkMode": "{colors.brand.10}",
          "_lightMode": "{colors.brand.90}",
          "base": "{colors.brand.10}",
        },
      },
    },
  },
}
`;
